# dioxus-markdown-macro

./: Cargo.toml  Dioxus.toml  README.md  build.rs
markdown-macro/: Cargo.toml
markdown-macro/src/: lib.rs
parse-markdown/: Cargo.toml
parse-markdown/src/: lib.rs
src/: hello.md  main.rs  perfect_clear.rs
src/pages/: hello.md  hello.rs
