[package]
name = "new"
version = "0.1.0"
authors = ["rambip <apero1808@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.0-alpha.5", features = ["web", "router"] }

wasm-bindgen="=0.2.95"

# Debug
dioxus-logger = "0.5"


markdown-macro = {path = "markdown-macro"}


[workspace]
members = [".", "markdown-macro"]
